# agentic-figma

./: .gitignore  AGENT-SETUP.md  CLAUDE.md  PLAN.md  pyproject.toml  readme.md  requirements.txt  start.py
.claude/skills/: typography_system
.cursor/: mcp.json
.github/workflows/: tests.yml
skills/typography_system/: SKILL.md  template.js
src/figma_mcp/: README.md  handlers.py  server.py  socket_server.py  tools.py  utils.py  ws_client.py
src/figma_plugin/: code.js  manifest.json  ui.html
src/mcp/: README.md  handlers.py  server.py  socket_server.py  tools.py  ws_client.py
tests/: test_handlers.py  test_server_startup.py  test_socket_server.py  test_utils.py
