[project]
name = "talk-to-figma-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "websockets>=12.0,<13.0",
]

[project.scripts]
figma-mcp   = "figma_mcp.server:main"
figma-relay = "figma_mcp.socket_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]
